<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HttpClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_msg">MsgActivity</string>
    <string name="add">添加</string>
    <string name="title_activity_add_msg">AddMsgActivity</string>
    <string name="msg_title">消息标题</string>
    <string name="msg_content">消息内容</string>
    <string name="submit">提交</string>
    <string name="title_activity_msg_detail">MsgDetailActivity</string>
    <string name="update">更新数据</string>

</resources>
