<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yhj.httpclient.AddMsgActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="top|left"
        android:hint="@string/msg_title"
        android:id="@+id/et_msg_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="top|left"
        android:hint="@string/msg_content"
        android:id="@+id/et_msg_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:id="@+id/btn_sub"/>

</LinearLayout>