<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/username"
        android:textSize="25sp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/et_username"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/passwd"
        android:textSize="25sp"
        android:textColor="#000"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/et_passwd"
        android:inputType="textPassword"/>
</LinearLayout>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/login"
    android:textSize="20sp"
    android:id="@+id/btn_login"/>

<TextView
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_gravity="right"
    android:gravity="right"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:text="@string/register"
    android:textSize="20sp"
    android:id="@+id/tv_reg"/>

</LinearLayout>
